@@ -65,6 +65,8 @@ OPTIONS
 		compile into a full system policy.  If this flag is not specified, SELint
 		will assume that scanned policy files are intended to be loaded into the
 		currently running system policy. 
+	-S, --summary
+		Display a summary of issues found after running the analysis
 
 	-r, --recursive
 		Scan recursively and check all SELinux policy files found.
