@@ -1,5 +1,8 @@
 # SELint Changelog
 
+## Unreleased
+- Add -S flag to print a summary of issue found following an analysis
+
 ## [1.0.2] - 2020-01-30
 ### Fixed
 - (Issue #11) Include CHANGELOG, LICENSE and testing input files in release tarballs
